# FFmpeg-samples

RtspSource-SaveFile/: CMakeLists.txt  main.cpp  uml.mdj
fflib/include/: ffinclude.h
fflib/lib/: libavdevice.so.58.3.100  libavfilter.so.7.16.100  libavformat.so.58.12.100  libavutil.so.56.14.100  libpostproc.so.55.1.100  libswresample.so.3.1.100  libswscale.so.5.1.100
fflib/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavutil.pc  libpostproc.pc
ffmpeg-4.0/: build.sh  config.asm  config.h
ffmpeg-4.0/doc/: config.texi
ffmpeg-4.0/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-4.0/libavcodec/: codec_list.c  mpegvideo_xvmc.d
ffmpeg-4.0/libavdevice/: libavdevice.so.58  sdl2.d
ffmpeg-4.0/libavfilter/: libavfilter.pc
ffmpeg-4.0/libavformat/: avio.c  aviobuf.c  file.c  libavformat.pc  options.c  utils.c
ffmpeg-4.0/libavutil/: libavutil.so.56  opt.c
ffmpeg-4.0/libpostproc/: libpostproc.so.55
ffmpeg-4.0/libswresample/: libswresample.pc  libswresample.so.3
ffmpeg-4.0/libswscale/: libswscale.pc  libswscale.so.5
mp4_to_wmv/: main.cpp  mp4_to_wmv.pro
rgb_to_mp4/: main.cpp
